--- a/src/AFUP/HaphpyBirthdayBundle/Resources/views/Default/index.html.twig
+++ b/src/AFUP/HaphpyBirthdayBundle/Resources/views/Default/index.html.twig
@@ -35,6 +35,11 @@
                 <p>{{ 'content.wanna_be_in.paragraph'|trans|raw }}</p>
             </div>
             <div class="col-sm-12 col-md-6">
+                {% for flashMessage in app.session.flashbag.get('notice') %}
+                    <div class="alert alert-success">
+                        {{ flashMessage|trans|raw }}
+                    </div>
+                {% endfor %}
                 {% if user is not null %}
                     <a href="{{ path('logout') }}" class="btn btn-ghost btn-default">
                         {{ user.username }}
