Add Haphpy Logo to header

--- a/src/AFUP/HaphpyBirthdayBundle/Resources/views/base.html.twig
+++ b/src/AFUP/HaphpyBirthdayBundle/Resources/views/base.html.twig
@@ -1,11 +1,12 @@
 <html>
     <head>
         <title>{{ 'head.title'|trans }}</title>
-        <link rel="stylesheet" type="text/css" href="/assets/css/style.css" />
+        <link rel="stylesheet" type="text/css" href="/assets/css/elaostrap.css" />
+        <link rel="stylesheet" type="text/css" href="/assets/css/haphpy.css" />
     </head>
     <body>
         <header id="header">
-            {{ 'general.title'|trans }}
+            <img src="/assets/images/haphpy-birthday.svg" id="haphpy-logo">
         </header>
 
         {% block content %}
