--- a/web/assets/css/haphpy.css
+++ b/web/assets/css/haphpy.css
@@ -1,7 +1,14 @@
+/** header **/
+
 header#header {
     padding: 5%;
 }
 
 #haphpy-logo {
     width: 100%;
+}
+
+/** Form **/
+.form-group label {
+    display: inline-block;
 }
