--- a/src/AFUP/HaphpyBirthdayBundle/Resources/views/Form/fields.html.twig
+++ b/src/AFUP/HaphpyBirthdayBundle/Resources/views/Form/fields.html.twig
@@ -2,8 +2,8 @@
     <div {{ block('widget_container_attributes') }}>
     {%- for child in form %}
         <div class="haphpy-radio">
-            <div class="haphpy-radio-widget">{{- form_widget(child, {'disabled': disabled}) -}}</div>
-            <div class="haphpy-radio-label">{{- form_label(child) -}}</div>
+            {{- form_widget(child, {'disabled': disabled}) -}}
+            {{- form_label(child) -}}
         </div>
     {% endfor -%}
     </div>
