--- a/src/AFUP/HaphpyBirthdayBundle/Resources/views/base.html.twig
+++ b/src/AFUP/HaphpyBirthdayBundle/Resources/views/base.html.twig
@@ -2,6 +2,7 @@
     <head>
         <title>{{ 'head.title'|trans }}</title>
         <link rel="stylesheet" type="text/css" href="/assets/css/elaostrap.css" />
+        <link rel="stylesheet" type="text/css" href="/assets/font-awesome/css/font-awesome.min.css" />
         <link rel="stylesheet" type="text/css" href="/assets/css/haphpy.css" />
     </head>
     <body>
