--- a/src/AFUP/HaphpyBirthdayBundle/Resources/views/base.html.twig
+++ b/src/AFUP/HaphpyBirthdayBundle/Resources/views/base.html.twig
@@ -32,7 +32,9 @@
             </div>
         </div>
         <header id="header">
-            <img src="/assets/images/haphpy-birthday.svg" id="haphpy-logo">
+            <div>
+                <img src="/assets/images/haphpy-birthday.svg" id="haphpy-logo">
+            </div>
         </header>
 
         {% block content %}
