--- a/src/AFUP/HaphpyBirthdayBundle/Resources/views/base.html.twig
+++ b/src/AFUP/HaphpyBirthdayBundle/Resources/views/base.html.twig
@@ -22,6 +22,7 @@
                     <ul>
                         <li><a href="{{ path('haphpy_index') }}">{{ 'menu.index.label'|trans }}</a></li>
                         <li><a href="{{ path('haphpy_contributions') }}">{{ 'menu.contributions.label'|trans }}</a></li>
+                        <li><a href="{{ path('haphpy_about') }}">{{ 'menu.about.label'|trans }}</a></li>
                     </ul>
                 </nav>
                 <a href="#" class="mobile-nav-toggle">
