--- a/src/AFUP/HaphpyBirthdayBundle/Resources/views/Default/contributions.html.twig
+++ b/src/AFUP/HaphpyBirthdayBundle/Resources/views/Default/contributions.html.twig
@@ -8,7 +8,8 @@
         <div class="row">
             {% for contribution in contributions %}
                 <div class="col-sm-12 col-md-6 col-lg-3 contribution">
-                        <span class="fa haphpy-icon-{{ contribution.authProvider }}"></span>{{ contribution.identifier }}
+                    <span class="fa haphpy-icon-{{ contribution.authProvider }}"></span>
+                    {{ contribution.identifier }}
                 </div>
             {% endfor %}
         </div>
