--- a/src/AFUP/HaphpyBirthdayBundle/Resources/views/Default/about.html.twig
+++ b/src/AFUP/HaphpyBirthdayBundle/Resources/views/Default/about.html.twig
@@ -62,6 +62,21 @@
                 {{ 'about.licence.text'|trans|raw }}
             </div>
         </div>
+        <h3>{{ 'about.helping.title'|trans }}</h3>
+        <div class="row">
+            <div class="col-sm-12 col-md-64 col-lg-4">
+                <h4>{{ 'about.helping.coding.title'|trans|raw }}</h4>
+                {{ 'about.helping.coding.text'|trans|raw }}
+            </div>
+            <div class="col-sm-12 col-md-64 col-lg-4">
+                <h4>{{ 'about.helping.translating.title'|trans|raw }}</h4>
+                {{ 'about.helping.translating.text'|trans|raw }}
+            </div>
+            <div class="col-sm-12 col-md-64 col-lg-4">
+                <h4>{{ 'about.helping.communicating.title'|trans|raw }}</h4>
+                {{ 'about.helping.communicating.text'|trans|raw }}
+            </div>
+        </div>
         <h3>{{ 'about.thanks.title'|trans }}</h3>
         <div class="row">
             <div class="col-sm-12 col-md-6 col-lg-6">
