Add Limit Date to About page

--- a/web/assets/css/haphpy.css
+++ b/web/assets/css/haphpy.css
@@ -11,6 +11,10 @@
     content: "\f099";
 }
 
+.text-highlight {
+    color: #f34141;
+}
+
 /** Menu **/
 #login-state span.fa {
     margin-right: 0.4em;
