--- a/src/AFUP/HaphpyBirthdayBundle/Resources/views/Default/about.html.twig
+++ b/src/AFUP/HaphpyBirthdayBundle/Resources/views/Default/about.html.twig
@@ -35,8 +35,9 @@
         </div>
         <h3>{{ 'about.uploaded_assets.title'|trans|raw }}</h3>
         <div class="row">
-            <div class="col-sm-12 col-md-6 col-lg-4">
-                {{ 'about.uploaded_assets.limit'|trans|raw }}
+            <div class="col-sm-12 col-md-6 col-lg-4 text-highlight">
+                {% set limit_date = limit_date|date('haphpy.date_format.full'|trans) %}
+                {{ 'about.uploaded_assets.limit'|trans({'%limit_date%': limit_date})|raw }}
             </div>
             <div class="col-sm-12 col-md-6 col-lg-4">
                 {{ 'about.uploaded_assets.respect'|trans|raw }}
