--- a/web/assets/css/haphpy.css
+++ b/web/assets/css/haphpy.css
@@ -35,6 +35,14 @@ header#header div {
 }
 
 /** Gauge **/
+#gauge-contributors, #gauge-remaining-days {
+    color: #000000;
+    text-align: center;
+}
+
+#gauge-contributors span, #gauge-remaining-days span {
+    font-size: 200%;
+}
 #gauge {
     position: relative;
     padding-top: 8px;
@@ -44,11 +52,19 @@ header#header div {
     border-radius: 4px;
 }
 
+#gauge .progress-bar {
+    border-radius: 0 4px 4px 0;
+}
+
 .gauge-step {
     position: absolute;
     top: 0;
     line-height: 24px;
     margin-left: -12px;
+}
+
+.gauge-step:last-child {
+    margin-left: -16px;
 }
 
 .gauge-step-dot {
@@ -62,7 +78,40 @@ header#header div {
 }
 
 .gauge-step-name {
-    padding: 20px 0 0 0;
+    display: inline;
+    position: absolute;
+    right: 0;
+    top: 0;
+    padding: 16px 24px 0 0;
+    white-space: nowrap;
+}
+
+
+@media screen and (max-width: 767px) {
+    .gauge-step-name {
+        display: none;
+    }
+
+    .gauge-step-dot:after {
+        display: inline;
+        position: absolute;
+        right: 0;
+        top: 0;
+        padding: 16px 24px 0 0;
+        white-space: nowrap;
+    }
+
+    .gauge-steps div:nth-of-type(1) .gauge-step-dot:after {
+        content: '👍';
+    }
+
+    .gauge-steps div:nth-of-type(2) .gauge-step-dot:after {
+        content: '🎉';
+    }
+
+    .gauge-steps div:nth-of-type(3) .gauge-step-dot:after {
+        content: '😍';
+    }
 }
 /** Form Steps */
 .haphpy-step {
@@ -85,6 +134,7 @@ header#header div {
         margin-left: 0;
     }
 }
+
 .haphpy-step h3 {
     line-height: 2em;
     text-transform: none;
