--- a/src/AFUP/HaphpyBirthdayBundle/Resources/views/Default/about.html.twig
+++ b/src/AFUP/HaphpyBirthdayBundle/Resources/views/Default/about.html.twig
@@ -46,7 +46,7 @@
                 {{ 'about.uploaded_assets.ad_free'|trans|raw }}
             </div>
         </div>
-            <h4>{{ 'about.uploaded_assets.specs.title'|trans }}</h4>
+        <h4>{{ 'about.uploaded_assets.specs.title'|trans }}</h4>
         <div class="row">
             <div class="col-sm-12 col-md-6 col-lg-6">
                 <h5>{{ 'about.uploaded_assets.specs.video_title'|trans }}</h5>
@@ -55,6 +55,54 @@
             <div class="col-sm-12 col-md-6 col-lg-6">
                 <h5>{{ 'about.uploaded_assets.specs.picture_title'|trans }}</h5>
                 {{ 'about.uploaded_assets.specs.picture'|trans|raw }}
+            </div>
+        </div>
+        <h4>{{ 'about.uploaded_assets.examples.title'|trans }}</h4>
+        <div class="row">
+            <div class="col-sm-12 col-md-4 col-lg-4">
+                <h5>{{ 'about.uploaded_assets.examples.message'|trans }}</h5>
+                <div class="video-container">
+                    <video controls poster="/assets/images/ilovephp.jpg">
+                        <source src="/assets/videos/ilovephp.webm" type='video/webm;codecs="vp8, vorbis"'>
+                        <source src="/assets/videos/ilovephp.mp4" type='video/mp4;codecs="avc1.42E01E, mp4a.40.2"'>
+                    </video>
+                </div>
+            </div>
+            <div class="col-sm-12 col-md-4 col-lg-4">
+                <h5>{{ 'about.uploaded_assets.examples.express_yourself'|trans }}</h5>
+                <div class="video-container">
+                    <img src="/assets/images/phpisart.png" class="fitting-image">
+                </div>
+            </div>
+            <div class="col-sm-12 col-md-4 col-lg-4">
+                <h5>{{ 'about.uploaded_assets.examples.php_acronym'|trans }}</h5>
+                <div class="video-container">
+                    <video controls>
+                        <source src="/assets/videos/people.webm" type='video/webm;codecs="vp8, vorbis"'>
+                        <source src="/assets/videos/people.mp4" type='video/mp4;codecs="avc1.42E01E, mp4a.40.2"'>
+                    </video>
+                </div>
+            </div>
+            <div class="col-sm-12 col-md-4 col-lg-4">
+                <h5>{{ 'about.uploaded_assets.examples.tribute'|trans }}</h5>
+                <div class="video-container">
+                    <img src="/assets/images/phpbiscuits.jpg" class="fitting-image">
+                </div>
+            </div>
+            <div class="col-sm-12 col-md-4 col-lg-4">
+                <h5>{{ 'about.uploaded_assets.examples.php_asset'|trans }}</h5>
+                <div class="video-container">
+                    <video controls poster="/assets/images/php-saved-my-life.jpg">
+                        <source src="/assets/videos/php-saved-my-life.webm" type='video/webm;codecs="vp8, vorbis"'>
+                        <source src="/assets/videos/php-saved-my-life.mp4" type='video/mp4;codecs="avc1.42E01E, mp4a.40.2"'>
+                    </video>
+                </div>
+            </div>
+            <div class="col-sm-12 col-md-4 col-lg-4">
+                <h5>…</h5>
+                <div class="video-container">
+                    {{ 'about.uploaded_assets.examples.beyond'|trans|raw }}
+                </div>
             </div>
         </div>
         <h3>{{ 'about.licence.title'|trans }}</h3>
