Improve user interface

--- a/src/AFUP/HaphpyBirthdayBundle/Resources/views/Default/about.html.twig
+++ b/src/AFUP/HaphpyBirthdayBundle/Resources/views/Default/about.html.twig
@@ -57,7 +57,7 @@
                 {{ 'about.uploaded_assets.specs.picture'|trans|raw }}
             </div>
         </div>
-        <h4>{{ 'about.uploaded_assets.examples.title'|trans }}</h4>
+        <h4 id="contribution-examples">{{ 'about.uploaded_assets.examples.title'|trans }}</h4>
         <div class="row">
             <div class="col-sm-12 col-md-4 col-lg-4">
                 <h5>{{ 'about.uploaded_assets.examples.message'|trans }}</h5>
