--- a/src/AFUP/HaphpyBirthdayBundle/Resources/views/base.html.twig
+++ b/src/AFUP/HaphpyBirthdayBundle/Resources/views/base.html.twig
@@ -5,7 +5,7 @@
         <link rel="stylesheet" type="text/css" href="/assets/font-awesome/css/font-awesome.min.css" />
         <link rel="stylesheet" type="text/css" href="/assets/css/haphpy.css" />
     </head>
-    <body>
+    <body class="has-header">
         <div id="mobile-nav">
             <div class="mobile-nav-title">{{ 'menu.mobile.navigation'|trans }}</div>
             <nav>
