--- a/web/assets/css/haphpy.css
+++ b/web/assets/css/haphpy.css
@@ -28,6 +28,10 @@ video {
     margin-right: 0.4em;
 }
 
+.translation-bridge-switcher ul.dropdown-menu {
+    min-width: 0;
+}
+
 /** Header **/
 
 header#header {
