--- a/web/assets/css/haphpy.css
+++ b/web/assets/css/haphpy.css
@@ -32,6 +32,10 @@ video {
     min-width: 0;
 }
 
+.translation-bridge-switcher a.dropdown-toggle {
+    text-transform: uppercase;
+}
+
 /** Header **/
 
 header#header {
