Add some link and acknowledgements in about page

--- a/src/AFUP/HaphpyBirthdayBundle/Resources/views/Default/about.html.twig
+++ b/src/AFUP/HaphpyBirthdayBundle/Resources/views/Default/about.html.twig
@@ -129,7 +129,11 @@
         <h3>{{ 'about.thanks.title'|trans }}</h3>
         <div class="row">
             <div class="col-sm-12 col-md-6 col-lg-6">
-                {{ 'about.thanks.elaostrap'|trans|raw }}
+                <ul>
+                    <li>{{ 'about.thanks.elaostrap'|trans|raw }}</li>
+                    <li>{{ 'about.thanks.php_ug'|trans|raw }}</li>
+                    <li>{{ 'about.thanks.fanzutti'|trans|raw }}</li>
+                </ul>
             </div>
         </div>
     </div>
