--- a/src/AFUP/HaphpyBirthdayBundle/Resources/views/Default/contributions.html.twig
+++ b/src/AFUP/HaphpyBirthdayBundle/Resources/views/Default/contributions.html.twig
@@ -4,42 +4,51 @@
 
 {% block content %}{% spaceless %}
     <div class="container">
-        <h3>{{ 'contributions.php_user_groups'|trans }}</h3>
-        <div class="row">
-            {% for group in userGroups|shuffle %}
-                <div class="col-sm-12 col-md-6 col-lg-4 user-group">
-                    <div class="user-group-image">
-                        <a href="{{ group.website }}">
-                            <img src="/assets/images/php-user-group/{{ group.picture }}">
-                        </a>
-                    </div>
-                    <div class="user-group-data">
-                        <h4 title="{{ group.full_name }}">
-                            <a href="{{ group.website }}">
-                                {{ group.displayed_name }}</h4>
-                            </a>
-                        <div class="user-group-location">
-                            {% if group.country %}
-                                <span>{{ group.country }}</span>{% if group.city %}, {{ group.city }}{% endif %}
-                            {% endif %}
-                        </div>
-                        {% if group.twitter %}
-                            <a href="https://twitter.com/{{ group.twitter }}" class="user-group-twitter">
-                                <span class="fa haphpy-icon-twitter"></span> {{ group.twitter }}
-                            </a>
-                        {% endif %}
-                    </div>
-                </div>
-            {% endfor %}
-        </div>
-        <h3>{{ 'contributions.contributors_list'|trans }}</h3>
-        <div class="row">
-            {% for contribution in contributions %}
-                <div class="col-sm-12 col-md-6 col-lg-3 contribution">
-                    <span class="fa haphpy-icon-{{ contribution.authProvider }}"></span>
-                    {{ contribution.identifier }}
-                </div>
-            {% endfor %}
-        </div>
+        
+       <ul class="nav-tabs nav-justified">
+         <li class="active"><a href="#tab-contributions">{{ 'contributions.contributors_list'|trans }}</a></li>
+         <li><a href="#tab-user-group">{{ 'contributions.php_user_groups'|trans }}</a></li>
+       </ul>
+
+
+       <div class="tab-content">
+
+          <div class="tab-pane" id="tab-user-group">
+              {% for group in userGroups|shuffle %}
+                  <div class="col-sm-12 col-md-6 col-lg-4 user-group">
+                      <div class="user-group-image">
+                          <a href="{{ group.website }}">
+                              <img src="/assets/images/php-user-group/{{ group.picture }}">
+                          </a>
+                      </div>
+                      <div class="user-group-data">
+                          <h4 title="{{ group.full_name }}">
+                              <a href="{{ group.website }}">
+                                  {{ group.displayed_name }}</h4>
+                              </a>
+                          <div class="user-group-location">
+                              {% if group.country %}
+                                  <span>{{ group.country }}</span>{% if group.city %}, {{ group.city }}{% endif %}
+                              {% endif %}
+                          </div>
+                          {% if group.twitter %}
+                              <a href="https://twitter.com/{{ group.twitter }}" class="user-group-twitter">
+                                  <span class="fa haphpy-icon-twitter"></span> {{ group.twitter }}
+                              </a>
+                          {% endif %}
+                      </div>
+                  </div>
+              {% endfor %}
+          </div>
+
+          <div class="tab-pane active" id="tab-contributions">
+              {% for contribution in contributions %}
+                  <div class="col-sm-12 col-md-6 col-lg-3 contribution">
+                      <span class="fa haphpy-icon-{{ contribution.authProvider }}"></span>
+                      {{ contribution.identifier }}
+                  </div>
+              {% endfor %}
+          </div>
+       </div>
     </div>
 {% endspaceless %}{% endblock %}
