--- a/src/AFUP/HaphpyBirthdayBundle/Resources/views/Default/index.html.twig
+++ b/src/AFUP/HaphpyBirthdayBundle/Resources/views/Default/index.html.twig
@@ -40,6 +40,9 @@
                     <a href="{{ path('twitter_connect') }}" class="btn btn-ghost btn-success">
                         {{ 'content.authentication.twitter.button.label'|trans|raw }}
                     </a>
+                    <a href="{{ path('facebook_connect') }}" class="btn btn-ghost btn-success">
+                        {{ 'content.authentication.facebook.button.label'|trans|raw }}
+                    </a>
                 {% endif %}
             </div>
             <div class="col-sm-12 col-md-4 haphpy-step">
