--- a/src/AFUP/HaphpyBirthdayBundle/Resources/views/base.html.twig
+++ b/src/AFUP/HaphpyBirthdayBundle/Resources/views/base.html.twig
@@ -8,6 +8,9 @@
         <link rel="stylesheet" type="text/css" href="/assets/css/elaostrap.css" />
         <link rel="stylesheet" type="text/css" href="/assets/css/haphpy.css" />
         <meta name="description" content="{{ 'meta.description'|trans }}" />
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0" />
+        <meta name="format-detection" content="telephone=no">
     </head>
     <body class="has-header">
         <div id="mobile-nav">
