--- a/src/AFUP/HaphpyBirthdayBundle/Resources/views/Default/index.html.twig
+++ b/src/AFUP/HaphpyBirthdayBundle/Resources/views/Default/index.html.twig
@@ -26,7 +26,7 @@
                 {% if user is not null %}
                     {{ 'step.authenticate.logged_in'|trans({
                         '%authProvider%': user.authProvider,
-                        '%username%': user.username
+                        '%username%': user.visibleName
                     })}}
                     <div class="text-center">
                         <a href="{{ path('logout') }}" class="btn btn-ghost btn-default">
