add demo label message
By adding to the parameters.yml file :
```
header_message: "This is a demo environnement"
```

The message will be displayed in the header.

--- a/src/AFUP/HaphpyBirthdayBundle/Resources/views/base.html.twig
+++ b/src/AFUP/HaphpyBirthdayBundle/Resources/views/base.html.twig
@@ -41,6 +41,10 @@
             </div>
         </div>
         <header id="header">
+            {% if header_message %}
+              <div class="alert alert-warning">{{ header_message }}</div>
+            {% endif %}
+
             <div>
                 <img src="/assets/images/haphpy-birthday.svg" id="haphpy-logo">
                 <h1>{{ 'haphpy.punchline'|trans|raw }}</h1>
