--- a/src/AFUP/HaphpyBirthdayBundle/Resources/views/base.html.twig
+++ b/src/AFUP/HaphpyBirthdayBundle/Resources/views/base.html.twig
@@ -41,8 +41,10 @@
             </div>
         </div>
         <header id="header">
-            {% if header_message %}
-              <div class="alert alert-warning">{{ header_message }}</div>
+            {% if warning_message %}
+                <div id="warning-message">
+                    <div class="progress-bar-info progress-bar-striped active">{{ warning_message }}</div>
+                </div>
             {% endif %}
 
             <div>
